Menu: Fixes z-index to be just below modals for fixed menu #505

--- a/src/collections/menu.less
+++ b/src/collections/menu.less
@@ -1618,7 +1618,7 @@
 
 .ui.menu.fixed {
   position: fixed;
-  z-index: 10;
+  z-index: 999;
   margin: 0em;
   border: none;
   width: 100%;
